Fixed description of 3.html

--- a/advanced_exercises/3.html
+++ b/advanced_exercises/3.html
@@ -1,8 +1,8 @@
 <html>
 <title>Rectangles</title>
 <body>
-<p>Filling the canvas full takes time. You can check console for progress.<br> 
-It might get stuck so give it another try! 
+<p>Filling the canvas only works if you're lucky with your random rectangles.
+You can check console for progress.<br> 
 Total area of the canvas is <b>160000px</b>.</p>
 <button type="button" id="create"  >Create rectangle</button>
 <button type="button" id="fill"  >Fill canvas</button>
